[package]
name = "qasm2-parse"
version = "0.1.0"
description = "A library for parsing OpenQASM 2 code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ectras/qasm2-parse"
readme = "Readme.md"
keywords = ["quantum", "parser", "qasm"]
categories = ["parser-implementations"]
edition = "2024"
rust-version = "1.85"

[dependencies]
float-cmp = "0.10.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
logos = "0.15.1"
rustc-hash = "2.1.1"
self_cell = "1.2.1"
thiserror = "2.0.17"
